fix for pagejumps that are not part of navbars

--- a/src/designs/metal/basic.css
+++ b/src/designs/metal/basic.css
@@ -364,7 +364,7 @@ body br
 .navbar .group .widget_container:last-child,.navbar .group .widget_container:last-child .widget {
 	border-bottom-right-radius: 1em;
 }
-.navbar .pagejump .actor {
+.pagejump .actor {
 	position: absolute;
 	top:0;
 	left:0;
